added column status and fix timein error

--- a/ATR/admin/style.css
+++ b/ATR/admin/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("img/chapels2.jpg");
+	background-image: url("img/attendance.png");
 	background-repeat: no-repeat;
 	background-size: cover;
 	margin: 0 auto;
